--- a/app/index.jade
+++ b/app/index.jade
@@ -14,6 +14,7 @@
 - jsFiles.push('landing/landing')
 - jsFiles.push('learn/learn')
 - jsFiles.push('register/register')
+- jsFiles.push('challenges/challenges')
 - jsFiles.push('layout/header')
 - jsFiles.push('services/api.service')
 - jsFiles.push('services/auth-token.service')
