final prep for challenge

--- a/app/challenges/challenges.jade
+++ b/app/challenges/challenges.jade
@@ -1,1 +1,5 @@
-img(src='http://ingramotorsports.com/clients/73277/2178689_sta.gif')
+.container
+	br
+	br
+	br
+	img(src='http://ingramotorsports.com/clients/73277/2178689_sta.gif')
